--- a/style.css
+++ b/style.css
@@ -51,32 +51,21 @@ body {
 
 
 .screen::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-  
-  /* Define the thumb style */
-  .screen::-webkit-scrollbar-thumb {
-    background: linear-gradient(320deg, #eb92be, #f8bcda);
-    border-radius: 1px;
-    padding: 10px;
-}
-  
-  /* Define the track style */
-  .screen::-webkit-scrollbar-track {
-    background-color: #fff;
-    border: 1px solid #ccc;
-}
-  
-  /* Define the button style */
-  .screen::-webkit-scrollbar-button {
-    background-color: #eb92be;
-    border-radius: 4px;
-    padding: 3px;
+    width: 20px;
     height: 20px;
 }
-  
-  /* Define the button style when being hovered over */
+
+  .screen::-webkit-scrollbar-thumb {
+    background: #eb92be;
+    border-radius: 1px;
+    padding: 100px;
+}
+
+  .screen::-webkit-scrollbar-track {
+    background-color: #fff;
+    border: 0.3px solid #ccc;
+}
+
   .screen::-webkit-scrollbar-button:hover {
     background-color: #999999;
 }
